<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ViagemAceitaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Seção Verde Escuro -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0F5E27"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/app_TextInfMotorista"
                android:textColor="#FFFFFF"
                android:textSize="19sp"
                android:textStyle="bold" />

            <!-- Bloco horizontal com ImageView e campos -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <!-- Imagem à esquerda -->
                <ImageView
                    android:id="@+id/imageViewIcone"
                    android:layout_width="39dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="12dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icon_rota" />

                <!-- Bloco vertical com os EditTexts -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etPartida"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/edittext_background"
                        android:hint="@string/app_hit_escolherPartida"
                        android:padding="16dp"
                        android:textColor="@color/VerdeEscuroOpaco"
                        android:textColorHint="@color/VerdeEscuroOpaco"
                        android:textSize="16sp"
                        android:inputType="text"
                        android:elevation="4dp"
                        android:fontFamily="@font/roboto" />

                    <EditText
                        android:id="@+id/etDestino"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edittext_background"
                        android:hint="@string/app_hit_destino"
                        android:padding="16dp"
                        android:textColor="@color/VerdeEscuroOpaco"
                        android:textColorHint="@color/VerdeEscuroOpaco"
                        android:textSize="16sp"
                        android:inputType="text"
                        android:elevation="4dp"
                        android:fontFamily="@font/roboto" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <!-- Seção Verde Médio -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#4E8655"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/app_TextInfoPercurso"
                android:textColor="#FFFFFF"
                android:textSize="19sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:backgroundTint="#ffffff"
                android:elevation="0dp"
                android:padding="12dp"
                android:text="@string/app_TextPrimeiraInfoPrincipal"
                android:textColor="#0F5E27"
                android:textSize="19sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#ffffff"
                android:elevation="0dp"
                android:padding="12dp"
                android:stateListAnimator="@null"
                android:text="@string/app_TextSegundaInfoPrincipal"
                android:textColor="#0F5E27"
                android:textSize="19sp" />
        </LinearLayout>

        <!-- Seção de Avaliação -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/background_viagem_aceita"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/app_TextAvalaicaoQuantitativo"
                android:textColor="@color/Branco"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/radioGroupEstrelas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:button="@drawable/star_selector"
                    android:padding="8dp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:button="@drawable/star_selector"
                    android:padding="8dp" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:button="@drawable/star_selector"
                    android:padding="8dp" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:button="@drawable/star_selector"
                    android:padding="8dp" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:button="@drawable/star_selector"
                    android:padding="8dp" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textPessimo"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="9dp"
                    android:text="@string/appTextRbStar1"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textRuim"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="9dp"
                    android:text="@string/appTextRbStar2"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textNeutro"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="9dp"
                    android:text="@string/appTextRbStar3"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textBom"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="9dp"
                    android:text="@string/appTextRbStar4"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textPerfeito"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="9dp"
                    android:text="@string/appTextRbStar5"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTViagemAceitaSet"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/app_btnStart"
        android:textColor="@color/Branco"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnMudarViagem"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMudarViagem"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/app_btnMudar"
        android:textColor="@color/Branco"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancelarViagem"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/Branco"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/app_btnCancelar"
        android:textColor="@color/VerdeEscuro"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMudarViagem"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>
