<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/VerdeEscuro"
    tools:context=".TelaCadastroVeiculo">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="257dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageBackgroundLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/img_background_login" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.65"
            android:background="@color/VerdeEscuro" />


    </FrameLayout>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/conteiner_tela_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCadastrarVeiculo"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/app_btnCadastrar_se"
        android:textColor="@color/Branco"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.87"
        app:layout_goneMarginEnd="20dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:text="@string/appTituloVeiculo"
        android:textAlignment="center"
        android:textColor="@color/Branco"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />


    <EditText
        android:id="@+id/etModelo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_background"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        android:fontFamily="@font/roboto"
        android:hint="@string/app_hint_modelo"
        android:inputType="text"
        android:maxLength="150"
        android:padding="16dp"
        android:textColor="@color/VerdeEscuroOpaco"
        android:textColorHint="@color/VerdeEscuroOpaco"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.1"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etCor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_background"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        android:fontFamily="@font/roboto"
        android:hint="@string/app_hint_cor"
        android:inputType="text"
        android:maxLength="150"
        android:padding="16dp"
        android:textColor="@color/VerdeEscuroOpaco"
        android:textColorHint="@color/VerdeEscuroOpaco"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.224"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etPlaca"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_background"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        android:fontFamily="@font/roboto"
        android:hint="@string/app_hint_placa"
        android:inputType="text"
        android:maxLength="150"
        android:padding="16dp"
        android:textColor="@color/VerdeEscuroOpaco"
        android:textColorHint="@color/VerdeEscuroOpaco"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.356"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etCNH"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_background"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        android:fontFamily="@font/roboto"
        android:hint="@string/app_hint_cnh"
        android:inputType="text"
        android:maxLength="150"
        android:padding="16dp"
        android:textColor="@color/VerdeEscuroOpaco"
        android:textColorHint="@color/VerdeEscuroOpaco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.507"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>





